Fix server channel page alignment issues

--- a/react-app/src/components/ChannelMessages/CMIndex/CMIndex.css
+++ b/react-app/src/components/ChannelMessages/CMIndex/CMIndex.css
@@ -1,15 +1,16 @@
 .cms-container {
-	width: 100%;
-	height: calc(100% - 40px);
+	width: calc(100% - 230px);
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
 }
 
 .cms-ct {
-	height: 100%;
+	height: calc(100% - 48px);
 	width: 100%;
-	/* overflow-y: scroll; */
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	/* justify-content: space-between; */
 }
 
 .cm-form-container {
@@ -36,7 +37,7 @@
 } */
 
 .cms-ch-name {
-	width: inherit;
+	width: 100%;
 	height: 48px;
 	display: flex;
 	justify-content: space-between;
@@ -55,9 +56,13 @@
 	bottom: 0;
 	padding-right: 0;
 	margin-right: 0;
-	margin-left: 10px;
-	padding-bottom: 25px;
+	/* padding-left: 10px; */
+	/* margin-left: 10px; */
+	/* padding-bottom: 25px; */
+	display: flex;
+	justify-content: center;
 	outline: 0;
+	box-sizing: border-box;
 }
 
 .cm-overflow {
@@ -72,6 +77,7 @@
 	word-wrap: break-word;
 	overflow-y: scroll;
 	height: 100%;
+	width: 100%;
 }
 
 .msg-ct {
