--- a/react-app/src/components/UserLanding/UserLanding.css
+++ b/react-app/src/components/UserLanding/UserLanding.css
@@ -3,7 +3,7 @@
   height: 100%;
   display: flex;
   flex-direction: row;
-  padding-top: 5px;
+  background-color: #36393f;
 }
 
 .reverse {
@@ -23,7 +23,8 @@
 .UserLanding-server-members {
   display: flex;
   flex-direction: column;
-  height: calc(100% + 5px);
+  /* height: calc(100% + 5px); */
+  height: 100%;
   width: 230px;
 }
 
